# traffic-light-detection

./: .gitignore  README.md  extract_traffic_lights.ipynb  pyproject.toml  requirements.txt
dataset/: README.md
scripts/: treemd.sh
src/: constants.py  detect_from_images.py  detect_from_video.py  extract_traffic_lights.py  object_detection.py  train_traffic_light_color.py
test/: README.md
train/: README.md
trained_models/: README.md
