[tool.poetry]
name = "traffic-light-detection"
version = "0.1.0"
description = ""
authors = ["Sam Stha <sthasam2@gmail.com>"]
readme = "README.md"
packages = [{include = "traffic_light_detection"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
